Fri Nov 22 15:49:35 1996  unknown  <bjaspan@mit.edu>

	* kadm_ser_wrap.c (kadm_ser_init): use sizeof instead of h_length
 	to determine number of bytes of addr to copy from DNS response
 	[krb5-misc/211]

Thu Jun 13 22:09:02 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* configure.in: remove ref to ET_RULES

Thu May  9 02:03:33 1996  Richard Basch  <basch@lehman.com>

	* kadm_funcs.c: Better handling of the principal lifetimes.

Thu Mar 21 20:33:43 1996  Richard Basch  <basch@lehman.com>

	* kadm_funcs.c: new principals were being created with two keys,
		one of which the key_data_ver=0 and had no valid data.

Tue Mar 19 19:42:37 1996  Richard Basch  <basch@lehman.com>

	* kadm_funcs.c:
		changed all references of des-cbc-md5 to des-cbc-crc
		fixed uninitialized variable
		set kvno modulo 256 in database

Wed Feb 21 23:34:31 1996  Richard Basch  <basch@lehman.com>

	* kadm_funcs.c: Initialize the length element of the krb5_db_entry
		structure in kadm_princ2entry (add_entry was failing).

Wed Dec 13 03:51:53 1995  Chris Provenzano (proven@mit.edu)

        * kadm_funcs.c : Remove mkvno for krb5_db_entry

Wed Sep 06 14:20:57 1995   Chris Provenzano (proven@mit.edu)

        * admin_server.c, kadm_funcs.c kadm_ser_wrap.c : 
		s/keytype/enctype/g, s/KEYTYPE/ENCTYPE/g

Tue Sep 05 22:10:34 1995   Chris Provenzano (proven@mit.edu)

        * admin_server.c, kadm_funcs.c, kadm_ser_wrap.c : Remove krb5_enctype 
		references, and replace with krb5_keytype where appropriate.

Tue Aug 15 14:31:37 EDT 1995	Paul Park	(pjpark@mit.edu)
	* admin_server,kadm_funcs,kadm_ser_wrap.c - Replace kadm_find_keytype()
		with krb5_dbe_find_keytype().


Thu Aug 10 14:48:26 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kadm_funcs.c - Add kadm_find_keytype() to find a particular key/salt
		pair.  Use this to find keys instead of assuming that the
		right one's in the first slot.
		Fix transposed arguments to strncpy().
		Handle mod_princ_data stuff.
		Supply saltblock to encrypt_key_data().