@@ -1,3 +1,8 @@
+1998-05-08  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	* kadm_server.c (krb_log): Print the year using 4 digit to avoid
+		Y2K issues.
+
 Fri Nov 22 15:49:27 1996  unknown  <bjaspan@mit.edu>
 
 	* kadm_ser_wrap.c (endif ): use sizeof instead of h_length to
